<resources>
    <string name="app_name">GoodFood</string>
    <string name="callNumber">tel:+34977222231</string>
    <string name="paypal">Donate €</string>
    <string name="item2">item 2</string>
    <string name="item3">item 3</string>
    <string name="subitem1">Subitem 1</string>
    <string name="subitem2">Subitem 2</string>
    <string name="email_verification_sent">Check your email and click on the link inside</string>
    <string name="email_verification_failure">Failure to send verification email. Contact support.</string>
    <string name="registration_failure">Registration failure. Contact support</string>
    <string name="email_not_verified">Account has not been verified. Check your email.</string>
    <string name="account_not_found">"Account not found. Click on SIGN UP button and create a new account. "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>